# pm-second-project

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  PLAN.md  README.md
.devcontainer/: devcontainer.json  postCreateCommand.sh
backend/: AGENTS.md  ai.py  conftest.py  crud.py  database.py  main.py  models.py  pyproject.toml
backend/routes/: ai.py  board.py
backend/tests/: test_activity.py  test_ai_chat.py  test_ai_ping.py  test_auth.py  test_board.py  test_boards.py  test_card_fields.py  test_card_labels.py  test_columns.py  test_health.py
docs/: PLAN.md  code_review.md  review.md
docs/architecture/: database.md  open-questions.md  overview.md
frontend/: AGENTS.md  README.md  playwright.integration.config.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/login/: login.test.tsx  page.tsx
frontend/src/components/: ActivityPanel.test.tsx  ActivityPanel.tsx  AiChat.test.tsx  AiChat.tsx  BoardSelector.test.tsx  BoardSelector.tsx  CardEditModal.test.tsx  CardEditModal.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanCardPreview.tsx  KanbanColumn.tsx  NewCardForm.tsx
frontend/src/lib/: api.test.ts  api.ts  kanban.ts
frontend/tests/: kanban.spec.ts
frontend/tests/integration/: ai.spec.ts
scripts/: start.bat  start.sh  stop.bat  stop.sh
