[project]
name = "kanban-studio"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20",
    "fastapi>=0.115",
    "itsdangerous>=2.2",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.28",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
